more chnages to names.

--- a/src/senaite/core/locales/en_US/LC_MESSAGES/senaite.core.po
+++ b/src/senaite/core/locales/en_US/LC_MESSAGES/senaite.core.po
@@ -4611,7 +4611,7 @@ msgid "SENAITE Registry"
 msgstr ""
 
 #: senaite/core/profiles/default/types/Setup.xml
-msgid "SENAITE Setup"
+msgid "Lims Setup"
 msgstr ""
 
 #: senaite/core/browser/frontpage/configure.zcml:23
